Fixed mobile layout with overflow.

--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,7 @@ input::placeholder {
 
 .main-wrapper{
   min-height: 800px;
+  overflow:auto;
   margin:25px;
   background-color:#fff;
   border-radius:10px;
@@ -232,7 +233,7 @@ input::placeholder {
 
 /* mobile optimized styles */
 
-@media (max-width:600px){
+@media (max-width:1061px){
   #facet-list
   {
    width: 100%;
@@ -279,23 +280,7 @@ input::placeholder {
   #search-box {
     height:100%;
     /* min-width: 600px; */
-    width:80%;
-    padding: 1em;
-    border-radius: 5px;
-    box-sizing: border-box;
-    border:none;
-    background-color: transparent;
-    font-size:12px;
-    color:#fff;
-    font-family: 'Lato', sans-serif;
-  }
-}
-
-@media (max-width:1061px) and (min-width:601){
-  #search-box {
-    height:80%;
-    /* min-width: 600px; */
-    width:100%;
+    
     padding: 1em;
     border-radius: 5px;
     box-sizing: border-box;
@@ -305,10 +290,11 @@ input::placeholder {
     color:#fff;
     font-family: 'Lato', sans-serif;
   }
-  .input-wrapper{
-    border-bottom:3px solid #fff;
-    height:100px;
-    width:60%;
-    float:left;
+
+  input::placeholder {
+    color:#fff;
+    overflow: auto;
+    
   }
 }
+
